name:           snaplet-openid-connect
version:        0.0.0.1
synopsis:       openid connect snaplet for the Snap Framework
description:    This snaplet contains support for using OpenID
                Connect, which uses OAuth2 and JWT.
license:        BSD3
license-file:   LICENSE
author:         Chris Biscardi
maintainer:     chris@christopherbiscardi.com
build-type:     Simple
cabal-version:  >= 1.6
homepage:       https://github.com/christopherbiscardi/snaplet-openid-connect
category:       Web, Snap

extra-source-files:  LICENSE

data-files:
  resources/db/devel.cfg
  resources/auth/devel.cfg

source-repository head
  type:     git
  location: https://github.com/christopherbiscardi/snaplet-openid-connect.git

Library
  hs-source-dirs: src

  exposed-modules:
    Snap.Snaplet.OpenIDConnect

  other-modules:
    Paths_snaplet_openid_connect

  build-depends:
    base                       >= 4       && < 4.8,
    bytestring                 >= 0.9.1   && < 0.11,
    clientsession              >= 0.7.2   && < 0.10,
    configurator               >= 0.2     && < 0.4,
    errors                     >= 1.4     && < 1.5,
    lens                                     < 4.9,
    MonadCatchIO-transformers  >= 0.3     && < 0.4,
    mtl                        >= 2       && < 2.3,
    snap                       >= 0.10    && < 0.15,
    text                       >= 0.11    && < 1.3,
    transformers               >= 0.2     && < 0.5,
    unordered-containers       >= 0.2     && < 0.3


  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
               -fno-warn-orphans -fno-warn-unused-do-bind
